syntax = "proto3";

package nftmeta.v1.endpoint;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/nftmeta/v1/endpoint";
import "web3eye/web3eye.proto";
import "web3eye/basetype/v1/chain.proto";


service Manager {
  rpc CreateEndpoint(CreateEndpointRequest) returns (CreateEndpointResponse) {}
  rpc CreateEndpoints(CreateEndpointsRequest) returns (CreateEndpointsResponse) {}
  rpc UpdateEndpoint(UpdateEndpointRequest) returns (UpdateEndpointResponse) {}
  rpc UpdateEndpoints(UpdateEndpointsRequest) returns (UpdateEndpointsResponse) {}
  rpc GetEndpoint(GetEndpointRequest) returns (GetEndpointResponse) {}
  rpc GetEndpointOnly(GetEndpointOnlyRequest)
      returns (GetEndpointOnlyResponse) {}
  rpc GetEndpoints(GetEndpointsRequest) returns (GetEndpointsResponse) {}
  rpc ExistEndpoint(ExistEndpointRequest) returns (ExistEndpointResponse) {}
  rpc ExistEndpointConds(ExistEndpointCondsRequest)
      returns (ExistEndpointCondsResponse) {}
  rpc DeleteEndpoint(DeleteEndpointRequest) returns (DeleteEndpointResponse) {}
}

message EndpointReq {
  optional uint32 ID = 10;
  optional string EntID = 11;
  optional chain.ChainType ChainType = 20;
  optional string ChainID = 30;
  optional string Address = 40;
  optional chain.EndpointState State = 50;
  optional string Remark = 60;
}

message Endpoint {
  // @inject_tag: sql:"id"
  uint32 ID = 10;
  // @inject_tag: sql:"ent_id"
  string EntID = 11;
  // @inject_tag: sql:"chain_type"
  string ChainTypeStr = 20;
  chain.ChainType ChainType = 21;
  // @inject_tag: sql:"chain_id"
  string ChainID = 30;
  // @inject_tag: sql:"address"
  string Address = 40;
  // @inject_tag: sql:"state"
  string StateStr = 50;
  chain.EndpointState State = 51;
  // @inject_tag: sql:"remark"
  string Remark = 60;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 70;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 80;
}

message Conds {
  web3eye.Uint32Val ID = 10;
  web3eye.StringVal EntID = 11;
  web3eye.Uint32Val ChainType = 20;
  web3eye.StringVal ChainID = 30;
  web3eye.StringVal Address = 40;
  web3eye.Uint32Val State = 50;
  web3eye.StringVal Remark = 60;
  web3eye.StringSliceVal EntIDs = 160;
}

message CreateEndpointRequest { EndpointReq Info = 10; }
message CreateEndpointResponse { Endpoint Info = 10; }

message CreateEndpointsRequest { repeated EndpointReq Infos = 10; }
message CreateEndpointsResponse { repeated Endpoint Infos = 10; }

message GetEndpointRequest { uint32 ID = 10; }
message GetEndpointResponse { Endpoint Info = 10; }

message GetEndpointsRequest {
  Conds Conds = 10;
  int32 Offset = 20;
  int32 Limit = 30;
}

message GetEndpointsResponse {
  repeated Endpoint Infos = 10;
  uint32 Total = 20;
}

message FailedInfo {
  string ID  = 10;
  string MSG  = 20;
}

message GetEndpointOnlyRequest { Conds Conds = 10; }
message GetEndpointOnlyResponse { Endpoint Info = 10; }

message UpdateEndpointRequest { EndpointReq Info = 10; }
message UpdateEndpointResponse { Endpoint Info = 10; }

message UpdateEndpointsRequest { repeated EndpointReq Infos = 10; }
message UpdateEndpointsResponse { repeated FailedInfo Infos = 10; }

message ExistEndpointRequest { uint32 ID = 10; }
message ExistEndpointResponse { bool Exist = 10; }

message ExistEndpointCondsRequest { Conds Conds = 10; }
message ExistEndpointCondsResponse { bool Exist = 10; }

message DeleteEndpointRequest { uint32 ID = 10; }
message DeleteEndpointResponse { Endpoint Info = 10; }
